--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
+    "joi": "^17.13.3",
     "morgan": "^1.10.1",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7",
